[package]
name = "os"
version = "0.1.0"
edition = "2018"

[dependencies]
paste = "1.0" # Macro with identifier concatenation

[[example]]
name = "dev"
crate-type = ["staticlib"]

[[example]]
name = "hello_world"
crate-type = ["staticlib"]

[[example]]
name = "fmt"
crate-type = ["staticlib"]

[[example]]
name = "panic"
crate-type = ["staticlib"]

[[example]]
name = "vga"
crate-type = ["staticlib"]

[[example]]
name = "uart"
crate-type = ["staticlib"]
