[package]
name = "os"
version = "0.1.0"
edition = "2018"


[features]
# Skip non-deterministic output for testing via `#[cfg(not(feature = "os-test"))]`
os-test = []

[dependencies]
paste = "1.0" # Macro with identifier concatenation

[[example]]
name = "dev"
crate-type = ["staticlib"]

[[example]]
name = "hello_world"
crate-type = ["staticlib"]

[[example]]
name = "fmt"
crate-type = ["staticlib"]

[[example]]
name = "panic"
crate-type = ["staticlib"]

[[example]]
name = "vga"
crate-type = ["staticlib"]

[[example]]
name = "uart"
crate-type = ["staticlib"]

[[example]]
name = "qemu"
crate-type = ["staticlib"]

[[example]]
name = "idt"
crate-type = ["staticlib"]

[[example]]
name = "pic"
crate-type = ["staticlib"]

[[example]]
name = "keyboard"
crate-type = ["staticlib"]

[[example]]
name = "double_fault"
crate-type = ["staticlib"]

[[example]]
name = "multiboot"
crate-type = ["staticlib"]

[[example]]
name = "multiboot2"
crate-type = ["staticlib"]

[[example]]
name = "frame_allocator"
crate-type = ["staticlib"]

[[example]]
name = "page_table"
crate-type = ["staticlib"]

[[example]]
name = "memory"
crate-type = ["staticlib"]
